<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <com.android.painton.ui.customviews.DrawView
        android:id="@+id/drawView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchStrokeFill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changeColorTv"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/paintModeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_stroke"
        android:padding="5dp"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/switchStrokeFill"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/ivUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button"
        android:src="@drawable/ic_undo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/undoTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/undo"
        android:padding="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ivUndo"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/ivErase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:src="@drawable/ic_eraser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/undoTv"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/paintEraseTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eraser"
        android:padding="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ivErase"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/ivClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:src="@drawable/ic_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paintEraseTv"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/clearTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:padding="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ivClear"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/ivColorPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button"
        android:src="@drawable/ic_color_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/changeColorTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colors"
        android:padding="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ivColorPicker"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/strokeWidthSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="1"
        android:valueTo="100"
        app:trackColorActive="@color/cardview_dark_background"
        app:trackColorInactive="@color/cardview_shadow_end_color"
        app:thumbElevation="10dp"
        app:thumbColor="@color/cardview_light_background"
        android:value="5"
        android:stepSize="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brush_size"
        android:padding="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>