<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.activity.SelectionActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="50dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/welcome_message"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/textColorPrimary"
        style="@style/TextAppearance.AppCompat.Display1"/>


    <ImageView
        android:id="@+id/paintIv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="100dp"
        android:src="@drawable/ic_draw_paint"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintEnd_toStartOf="@id/drawShapesIv"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/paintTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sketch"
        android:padding="5dp"
        android:layout_marginVertical="20dp"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/paintIv"
        app:layout_constraintStart_toStartOf="@id/paintIv"
        app:layout_constraintEnd_toEndOf="@id/paintIv"/>

    <ImageView
        android:id="@+id/drawShapesIv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="100dp"
        android:src="@drawable/ic_draw_shapes"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toEndOf="@id/paintIv"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/drawShapesTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/draw_shapes"
        android:padding="5dp"
        android:layout_marginVertical="20dp"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/drawShapesIv"
        app:layout_constraintStart_toStartOf="@id/drawShapesIv"
        app:layout_constraintEnd_toEndOf="@id/drawShapesIv"/>

</androidx.constraintlayout.widget.ConstraintLayout>